--- a/src/main/resources/assets/theatrical/lang/en_us.json
+++ b/src/main/resources/assets/theatrical/lang/en_us.json
@@ -3,7 +3,6 @@
   "key.theatrical.walk_speed_trigger": "Change walk speed",
   "key.theatrical.walk_speed_modifier": "Increase walk speed step",
   "theatrical.gui.walk_speed_message": "Walk speed: %d%%",
-
   "category.theatrical": "Theatrical",
 
   "command.theatrical.countdown.success": "Successfully scheduled a countdown of %d seconds for %d player%s",
@@ -30,6 +29,26 @@
   "theatrical.countdown.state.rm.recording": "Recording replay",
   "theatrical.countdown.state.rm.stopped": "Not recording replay",
   "theatrical.countdown.state.rm.disabled": "Replay check disabled",
+
+  "theatrical.scene.created": "Created scene successfully",
+  "theatrical.scene.removed": "Removed scene successfully",
+  "theatrical.scene.edit.not_exists": "The given scene does not exist",
+  "theatrical.scene.edit.no_permission": "You do not have permission to manage this scene",
+  "theatrical.scene.edit.success": "Successfully updated scene",
+  "theatrical.scene.setup": "Successfully set up scene",
+  "theatrical.scene.start": "Successfully started scene",
+  "theatrical.scene.move.success": "Successfully moved actor",
+  "theatrical.scene.add.success": "Successfully added actor",
+  "theatrical.scene.add.already_exists": "Actor is already in the scene",
+  "theatrical.scene.state.saved": "Saved player state for %s",
+  "theatrical.scene.state.load_on": "Actor states will now be restored when this scene is set up.",
+  "theatrical.scene.state.load_off": "Actor states will no longer be restored when this scene is set up.",
+  "theatrical.scene.state.world.load": "Successfully loaded state of world.",
+  "theatrical.scene.state.world.save": "Successfully saved state of world.",
+  "theatrical.scene.visuals.on": "Now visualising scene \"%s\"",
+  "theatrical.scene.visuals.off": "No longer visualising scene \"%s\"",
+  "theatrical.scene.trust": "Now trusting %s",
+  "theatrical.scene.untrust": "No longer trusting %s",
 
   "theatrical.toast.countdown.progress": "%.1f",
   "theatrical.toast.countdown.done": "Start!",
